[gd_scene load_steps=5 format=3 uid="uid://j6w2crlvclub"]

[ext_resource type="Script" uid="uid://d00rhlufcsaev" path="res://Characters/character.gd" id="1_bqlw8"]
[ext_resource type="Texture2D" uid="uid://bucu4x82raxmy" path="res://icon.svg" id="2_03jby"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cjnyq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_03jby"]

[node name="Character" type="CharacterBody2D"]
input_pickable = true
motion_mode = 1
script = ExtResource("1_bqlw8")

[node name="sprite" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_03jby")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_cjnyq")

[node name="Label" type="Label" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 23.0

[node name="HealthBar" type="ProgressBar" parent="."]
visible = false
custom_minimum_size = Vector2(40, 6)
offset_right = 4.0
offset_bottom = 27.0

[node name="ActionPreviewLine" type="Line2D" parent="."]
width = 4.0
default_color = Color(1, 0.8125, 0.25, 1)

[node name="MovePathLine" type="Line2D" parent="."]
width = 4.0
default_color = Color(0.860369, 0.860369, 0.860369, 1)

[node name="AOEPreviewShape" type="Polygon2D" parent="."]

[node name="ClickArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickArea"]
shape = SubResource("RectangleShape2D_03jby")

[node name="FloatingTextLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="PreviewContainer" type="Node2D" parent="."]

[node name="PathPreviewLine" type="Line2D" parent="PreviewContainer"]
width = 4.0

[node name="ActionPreviewSprite" type="Sprite2D" parent="PreviewContainer"]

[node name="SelectionVisual" type="Polygon2D" parent="."]
color = Color(0.11303, 0.62584, 0.55736, 1)
polygon = PackedVector2Array(0, 0, 0, 0, 0, 0)
